--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.1.15",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
